[tool.poetry]
name = "xicorpy"
version = "0.1.2"
description = "Python implementation of Chatterjee's Rank Correlation, its modifications, and other offshoots"
authors = ["Swarna Vallabhaneni <swarnakumar@gmail.com>"]
maintainers = ["Swarna Vallabhaneni <swarnakumar@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/swarnakumar/xicorpy"
homepage = "https://swarnakumar.github.io/xicorpy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
    ]


[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.2"
numpy = "^1.17"
scipy = "^1.7"
scikit-learn = "^1.0.2"
mypy = "0.931"
mkdocstrings = {version = "~0.17", optional = true}
mkdocs-material = {version = "~8.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.16.0"
coverage = {extras = ["toml"], version = "^6.2"}
mypy = "^0.931"

[tool.poetry.extras]
docs = ["mkdocstrings", "mkdocs-material"]
typings = ["mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=xicorpy"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
source = ["xicorpy"]

[tool.coverage.report]
fail_under = 100
