[tool.poetry]
name = "xicorpy"
version = "0.6"
description = "Python implementation of Chatterjee's Rank Correlation, its modifications, and other offshoots"
authors = ["Swarna Vallabhaneni <swarnakumar@gmail.com>"]
maintainers = ["Swarna Vallabhaneni <swarnakumar@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/swarnakumar/xicorpy"
homepage = "https://swarnakumar.github.io/xicorpy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
    ]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2"
numpy = "^2"
scikit-learn = "^1.5"
mypy = "1.11"
mkdocstrings = {version = "~0.25", optional = true, extras=["python"]}
mkdocs-material = {version = "~9.5", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"
coverage = {extras = ["toml"], version = "^7.6"}
mypy = "1.11"
pyyaml = ">=6.0.1"

[tool.poetry.extras]
docs = ["mkdocstrings", "mkdocs-material"]
typings = ["mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=xicorpy --cov-report term-missing"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
source = ["xicorpy"]

[tool.coverage.report]
fail_under = 100
